# launch-python-client

./: .flake8  .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .pylintrc  404.html  README.md  index.html  justfile  launch-test-2.py  launch-test-get-model-status.py  launch-test.py  launchtest.py  mkdocs.yml  objects.inv  openapitools.json  pyproject.toml  sitemap.xml
.circleci/: config.yml
.openapi-generator/: FILES
api/client/: index.html
api/endpoint_predictions/: index.html
api/hooks/: index.html
api/llms/: index.html
api/model_bundles/: index.html
api/model_endpoints/: index.html
cli/: index.html
concepts/batch_jobs/: index.html
concepts/callbacks/: index.html
concepts/endpoint_predictions/: index.html
concepts/model_bundles/: index.html
concepts/model_endpoints/: index.html
concepts/overview/: index.html
docs/: .buildinfo  cli.md  cli_help.txt  genindex.html  index.html  index.md  objects.inv  plugins.py  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: documentation_options.js  pygments.css
docs/api/: client.md  endpoint_predictions.md  hooks.md  llms.md  model_bundles.md  model_endpoints.md
docs/concepts/: batch_jobs.md  callbacks.md  endpoint_predictions.md  model_bundles.md  model_endpoints.md  overview.md
docs/guides/: custom_docker_images.md  deploying_your_code.html  getting_started.html  index.html  integrations.html  registering_your_code.html  troubleshooting.html
docs/models/: Annotation.md  Audio.md  Audio1.md  Audio2.md  BatchCompletionsJob.md  BatchCompletionsJobStatus.md  BatchCompletionsModelConfig.md  BatchJobSerializationFormat.md  BatchJobStatus.md  BodyUploadFileV1FilesPost.md  CallbackAuth.md  CallbackBasicAuth.md  CallbackmTLSAuth.md  CancelBatchCompletionsV2Response.md  CancelFineTuneResponse.md  ChatCompletionFunctionCallOption.md  ChatCompletionFunctions.md  ChatCompletionMessageToolCall.md  ChatCompletionMessageToolCallChunk.md  ChatCompletionMessageToolCallsInput.md  ChatCompletionMessageToolCallsOutput.md  ChatCompletionNamedToolChoice.md  ChatCompletionRequestAssistantMessage.md  ChatCompletionRequestAssistantMessageContentPart.md  ChatCompletionRequestDeveloperMessage.md  ChatCompletionRequestFunctionMessage.md  ChatCompletionRequestMessage.md  ChatCompletionRequestMessageContentPartAudio.md  ChatCompletionRequestMessageContentPartFile.md  ChatCompletionRequestMessageContentPartImage.md  ChatCompletionRequestMessageContentPartRefusal.md  ChatCompletionRequestMessageContentPartText.md  ChatCompletionRequestSystemMessage.md  ChatCompletionRequestSystemMessageContentPart.md  ChatCompletionRequestToolMessage.md  ChatCompletionRequestToolMessageContentPart.md  ChatCompletionRequestUserMessage.md  ChatCompletionRequestUserMessageContentPart.md  ChatCompletionResponseMessage.md  ChatCompletionStreamOptions.md  (+181 more)
guides/custom_docker_images/: index.html
launch/: README.md  __init__.py  api_client_README.md  client.py  connection.py  constants.py  docker_image_batch_job_bundle.py  errors.py  file.py  find_packages.py  fine_tune.py  fine_tune_job.py  hooks.py  logger.py  make_batch_file.py  model.py  model_bundle.py  model_endpoint.py  nucleus_integration.py  pydantic_schemas.py  request_validation.py  servable.py  utils.py
launch/api_client/: __init__.py  api_client.py  rest.py  (+5 more)
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
src_docs/: conf.py  index.rst
tests/: conftest.py  test_bundles.py  test_client.py  test_docs.py  test_endpoints.py  test_import_lib.py  test_make_batch_file.py  test_model_endpoint.py  test_pipeline.py  test_pydantic_schemas.py  test_utils.py
(+1704 files in other folders)
