[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "scale-launch"
version = "0.1.0"
description = "The official Python client library for Launch, the Data Platform for AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
homepage = "https://scale.com/"
repository = "https://github.com/scaleapi/launch-python-client"
packages = [{include="launch"}]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.1"
cloudpickle = "^2.0.0"
scale-nucleus = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
isort = "^5.10.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
