[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
exclude = [
    '^launch/clientlib/'
]

[tool.poetry]
name = "scale-launch"
version = "0.1.0"
description = "The official Python client library for Launch, the Data Platform for AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
homepage = "https://scale.com/"
repository = "https://github.com/scaleapi/launch-python-client"
packages = [{include="launch"}]

[tool.poetry.dependencies]
python = "^3.7"
cloudpickle = "^2.0.0"
requests = "^2.25.1"
dataclasses-json = "^0.5.7"
rich = "^12.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^7.1.1"
pre-commit = "^2.17.0"
coverage = "^6.3.2"
types-setuptools = "^57.4.11"
types-requests = "^2.27.13"
types-pyyaml = "^6.0.5"
requests_mock = "^1.9.3"
sphinx-autobuild = "^2021.3.14"
sphinx-autoapi = "^1.8.4"
furo = "^2022.4.7"


[tool.poetry.scripts]
scale-launch = 'launch.cli.bin:entry_point'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
